# FalconCV

./: .gitignore  LICENSE  LICENSE.txt  README.md  config.yml  mkdocs.yml  pyproject.toml  setup.py  test2.py
.github/workflows/: docker_deploy.yml
docker/: .condarc  .run_in_falconcv.sh  Dockerfile  README.md  cmd  environment.yml
docs/: 404.html  index.html  sitemap.xml
docs/about/: index.html
docs/datasets/: index.html
docs/models/: index.html
docs/search/: search_index.json
examples/: detection_model.py  detection_model_example.py  detection_tflite_example.py  ds_openImages.py  metrics.py  object_detection_dataset.ipynb  open_vino.py  openvino.py  openvino_example.py  segmentation_example.py  segmentation_model.py  test_seg.py  train_detection_model.ipynb  train_segmentation_model.ipynb
examples/datasets/: coco_example.py  ds_coco.py  ds_openimages.py  openimages_example.py
examples/detectron/: detection.py  detection_predict_example.py  detection_pretrained_example.py  detection_train.py  detection_train_example.py
examples/tensorflow/: detection_model.py  detection_model_example.py  detection_tflite_example.py  openvino_example.py  segmentation_dataset.ipynb  segmentation_model.py
examples/tf/: detection_model.py  segmentation_model.py
extra/docs/: commands.txt  tfutil.txt
falconcv/: __init__.py  misc.py
falconcv/cons/: __init__.py
falconcv/data/: __init__.py  openimages.py  pascalvoc_annotation.py  pascalvoc_dataset.py  pascalvoc_image.py  pascalvoc_metrics.py  (+2 more)
mkdocs/: datasets.md  index.md  models.md
tests/: test_falconcv.py
(+91 files in other folders)
